[package]
name = "synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fon = "0.6.0"
twang = "0.9.0"
clap = { version = "3.0.5", features = ["derive"] }
cpal = { version = "0.13.4", features = ["jack"] }
crossbeam = "0.8.1"
piston = "0.53.1"
piston2d-opengl_graphics = "0.79.0"
piston2d-graphics = "0.41.0"
pistoncore-glfw_window = "0.74.0"
dasp = "0.11.0"
dasp_signal = "0.11.0"
