[package]
name = "synth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "pg"
path = "src/pg.rs"

[[bin]]
name = "ui"
path = "src/ui.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fon = "0.6.0"
twang = "0.9.0"
clap = { version = "3.0.5", features = ["derive"] }
cpal = { version = "0.13.4", features = ["jack"] }
crossbeam = "0.8.1"
piston = "0.53.1"
piston2d-opengl_graphics = "0.79.0"
piston2d-graphics = "0.41.0"
pistoncore-glfw_window = "0.74.0"
dasp = "0.11.0"
dasp_signal = "0.11.0"
dasp_sample = "0.11.0"
dioxus = "0.3"
dioxus-web = { version = "0.3" }
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.78"
log = "0.4.14"
console_error_panic_hook = "*"
im-rc = "15.0.0"
dioxus-desktop = "0.3.0"
cocoa = "0.25.0"
cacao = "0.3.2"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
crossterm = "0.26.1"
